# idris-contrib

./: BUILD.bazel
Data/: Graph.idr
